Better drag-and-drop styles

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -93,6 +93,10 @@ body
         .section-helpers
             opacity: 1
 
+    &.ui-sortable-placeholder
+        background: #000
+        visibility: visible !important
+
 .section[data-type="image"]
 
     .section-content
