--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,9 @@ body {
     background: rgba(255, 255, 255, 0.8); }
     .section.ui-sortable-helper .section-helpers {
       opacity: 1; }
+  .section.ui-sortable-placeholder {
+    background: black;
+    visibility: visible !important; }
 
 .section[data-type="image"] .section-content {
   text-align: center; }
