compile plugins.js

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -18,10 +18,5 @@ html(lang="en")
         .drag-helper
             .message Drag and drop...
 
-        script(src="js/underscore.js")
-        script(src="js/jquery.js")
-        script(src="js/jquery-ui.js")
-        script(src="js/medium-editor.js")
-        script(src="js/d3.js")
-        script(src="js/backbone.js")
+        script(src="js/plugins.js")
         script(src="js/app.js")
