More style improvements

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 .sections {
   background: white;
   color: black;
-  padding: 20px 0;
+  padding: 80px 0;
   width: 1080px;
   max-width: 100%;
   margin-left: auto;
@@ -152,8 +152,14 @@ body.dragover .drag-helper {
   .add-section:before {
     content: "Add content"; }
 
-body.section-focused .section:not(.section-focused) .section-inner {
-  opacity: 0.3; }
+body.section-focused .section.section-focused .section-inner:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 1em;
+  left: 80px;
+  width: 1px;
+  background: red; }
 body.section-focused .section:not(.section-focused):hover .section-inner {
   opacity: 1; }
 
