--- a/sass/medium-editor-theme-default.sass
+++ b/sass/medium-editor-theme-default.sass
@@ -89,4 +89,5 @@ $medium_editor_link_color:    #fff
     color: $medium_editor_link_color
 
 .medium-editor-placeholder:after
-    color: $medium_editor_border_color
+    font-style: italic
+    opacity: .5
