--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *, *:after, *:before {
   box-sizing: border-box; }
 
@@ -34,29 +35,39 @@ body {
       content: "";
       display: table;
       clear: both; }
-  .section:hover .section-inner .section-content:focus, .section:hover .section-inner .section-caption:focus, .section.section-focused .section-inner .section-content:focus, .section.section-focused .section-inner .section-caption:focus {
+  .section.section-focused .section-inner .section-content:focus, .section.section-focused .section-inner .section-caption:focus {
     outline: none; }
   .section .section-helpers {
-    overflow: hidden;
     position: absolute;
     top: 0;
     min-height: 100%;
-    right: 100%;
-    opacity: 0; }
+    opacity: 0;
+    width: 100px; }
+    .section .section-helpers.section-helpers-left {
+      right: 100%; }
+    .section .section-helpers.section-helpers-right {
+      left: 100%; }
     .section .section-helpers div {
-      margin-bottom: 1px;
-      padding-right: 20px;
       display: block;
-      text-align: right;
       color: white;
-      margin-bottom: 10px;
-      font-weight: normal; }
+      position: absolute;
+      top: 0;
+      height: 60px;
+      font-size: 40px;
+      width: 20px;
+      text-align: center; }
     .section .section-helpers .section-drag-handle {
-      cursor: move; }
+      cursor: ns-resize;
+      right: 20px; }
       .section .section-helpers .section-drag-handle:before {
-        content: "Reorder"; }
-    .section .section-helpers .section-delete:before {
-      content: "Remove"; }
+        content: "↕"; }
+    .section .section-helpers .section-delete {
+      font-size: 40px;
+      line-height: 1;
+      cursor: pointer;
+      left: 20px; }
+      .section .section-helpers .section-delete:before {
+        content: "×"; }
   .section .section-caption {
     font-size: 17px;
     width: 290px;
@@ -84,8 +95,7 @@ body {
 .section[data-type="text"] .section-content, .section[data-type="image"] .section-content, .section[data-type="graph"] .section-content {
   width: 500px;
   float: left;
-  max-width: 100%;
-  overflow: hidden; }
+  max-width: 100%; }
 
 .section[data-type="header"] .section-caption {
   display: none; }
@@ -97,7 +107,8 @@ h1 {
   text-align: center; }
 
 h1 {
-  font-size: 35px; }
+  font-size: 35px;
+  margin-right: -350px; }
 
 h2 {
   font-size: 30px; }
@@ -108,11 +119,16 @@ h3 {
 p {
   margin-top: 0;
   margin-bottom: 20px; }
-  p:last-child {
-    margin-bottom: 0; }
+
+pre {
+  font-family: Menlo, monospace;
+  font-size: 13px; }
 
 table th {
   font-weight: normal; }
+
+.section-content *:last-child, .section-caption *:last-child {
+  margin-bottom: 0; }
 
 .drag-helper {
   display: none;
@@ -160,8 +176,6 @@ body.section-focused .section.section-focused .section-inner:before {
   left: 80px;
   width: 1px;
   background: red; }
-body.section-focused .section:not(.section-focused):hover .section-inner {
-  opacity: 1; }
 
 .axis path, .axis line {
   fill: none;
