--- a/css/medium-editor.css
+++ b/css/medium-editor.css
@@ -61,16 +61,7 @@
   cursor: pointer; }
 
 .medium-editor-toolbar-active, .medium-editor-anchor-preview-active {
-  visibility: visible;
-  -webkit-animation: pop-upwards 160ms forwards linear;
-  -moz-animation: pop-upwards 160ms forwards linear;
-  -ms-animation: pop-upwards 160ms forwards linear;
-  -o-animation: pop-upwards 160ms forwards linear;
-  animation: pop-upwards 160ms forwards linear;
-  -webkit-transition: top 0.075s ease-out, left 0.075s ease-out;
-  -moz-transition: top 0.075s ease-out, left 0.075s ease-out;
-  -o-transition: top 0.075s ease-out, left 0.075s ease-out;
-  transition: top 0.075s ease-out, left 0.075s ease-out; }
+  visibility: visible; }
 
 .medium-editor-action-bold {
   font-weight: bolder; }
