--- a/sass/style.sass
+++ b/sass/style.sass
@@ -38,7 +38,7 @@ body
         padding: 0 20px 20px
         transition: opacity .3s
 
-    &:hover .section-inner, &.section-focused .section-inner
+    &.section-focused .section-inner
 
         .section-content, .section-caption
 
@@ -46,30 +46,43 @@ body
                 outline: none
 
     .section-helpers
-        overflow: hidden
         position: absolute
         top: 0
         min-height: 100%
-        right: 100%
         opacity: 0
+        width: 100px
+
+        &.section-helpers-left
+            right: 100%
+
+        &.section-helpers-right
+            left: 100%
 
         div
-            margin-bottom: 1px
-            padding-right: 20px
             display: block
-            text-align: right
             color: #fff
-            margin-bottom: 10px
-            font-weight: normal
+            position: absolute
+            top: 0
+            height: 60px
+            font-size: 40px
+            width: 20px
+            text-align: center
 
         .section-drag-handle
-            cursor: move
+            cursor: ns-resize
+            right: 20px
 
             &:before
-                content: "Reorder"
+                content: "↕"
 
-        .section-delete:before
-            content: "Remove"
+        .section-delete
+            font-size: 40px
+            line-height: 1
+            cursor: pointer
+            left: 20px
+
+            &:before
+                content: "×"
 
     .section-caption
         font-size: 17px
@@ -112,7 +125,6 @@ body
         width: 500px
         float: left
         max-width: 100%
-        overflow: hidden
 
 .section[data-type="header"]
 
@@ -127,6 +139,7 @@ h1
 
 h1
     font-size: 35px
+    margin-right: -350px
 
 h2
     font-size: 30px
@@ -138,13 +151,19 @@ p
     margin-top: 0
     margin-bottom: 20px
 
-    &:last-child
-        margin-bottom: 0
+pre
+    font-family: Menlo, monospace
+    font-size: 13px
 
 table
 
     th
         font-weight: normal
+
+.section-content, .section-caption
+
+    *:last-child
+        margin-bottom: 0
 
 .drag-helper
     display: none
@@ -198,13 +217,13 @@ body.section-focused
             width: 1px
             background: red
 
-    .section:not(.section-focused)
+    // .section:not(.section-focused)
 
-        // .section-inner
-        //     opacity: 0.3
+    //     .section-inner
+    //         opacity: 0.3
 
-        &:hover .section-inner
-            opacity: 1
+    //     &:hover .section-inner
+    //         opacity: 1
 
 .axis
     path, line
