--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal; }
 
 h1 {
-  text-align: center; }
-
-h1 {
-  font-size: 35px;
-  margin-right: -350px; }
+  font-size: 35px; }
 
 h2 {
   font-size: 30px; }
