--- a/jade/index.jade
+++ b/jade/index.jade
@@ -12,6 +12,7 @@ html(lang="en")
         link(href="css/style.css" rel="stylesheet")
     head
     body
+        .load-mock-data
         .sections
         .add
             .add-section
