--- a/sass/style.sass
+++ b/sass/style.sass
@@ -201,6 +201,18 @@ body.dragover .drag-helper
     &:before
         content: "Add content"
 
+.load-mock-data
+    position: absolute
+    cursor: pointer
+    top: 0
+    left: 0
+    color: #fff
+    padding: 13px 19px 12px
+    font-weight: normal
+
+    &:before
+        content: "Load example document"
+
 body.section-focused
 
     .section.section-focused
