--- a/sass/style.sass
+++ b/sass/style.sass
@@ -152,11 +152,6 @@ pre
     font-family: Menlo, monospace
     font-size: 13px
 
-table
-
-    th
-        font-weight: normal
-
 .section-content, .section-caption
 
     *:last-child
@@ -242,6 +237,29 @@ body.section-focused
 
     table
         display: inline-block
-        vertical-align: top
-        margin-right: 25px
-        margin-bottom: 25px
+        border-collapse: collapse
+        margin-bottom: 1em
+
+        th
+            padding-right: 20px
+            padding-bottom: .7em
+            text-align: left
+            border-bottom: 1px solid #000
+            font-weight: inherit
+
+            &:last-child
+                padding-right: 0
+
+        td
+            text-align: right
+            padding-right: 80px
+
+            &:first-child
+                text-align: left
+                padding-right: 0
+
+            &:last-child
+                padding-right: 60px
+
+        tr:first-child td
+            padding-top: .7em
