--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,7 +9,9 @@ body
     font-family: "Gill Sans", "Helvetica Neue", sans-serif
     background: #000
     color: #fff
+
     -webkit-font-smoothing: antialiased
+    text-rendering: optimizeLegibility
 
     font-weight: 300
     font-size: 20px
