--- a/sass/style.sass
+++ b/sass/style.sass
@@ -125,7 +125,7 @@ body
             opacity: .5
 
     &.ui-sortable-helper
-        background: rgba(255, 255, 255, 0.8)
+        background: rgba(255, 255, 255, .8)
 
         .section-helpers
             opacity: 1
