--- a/sass/style.sass
+++ b/sass/style.sass
@@ -175,7 +175,16 @@ pre
     font-family: Menlo, monospace
     font-size: 13px
 
+ul
+    padding: 0
+
+    li
+        margin-bottom: .6em
+
 .section-content, .section-caption
+
+    *:first-child
+        margin-top: 0
 
     *:last-child
         margin-bottom: 0
