--- a/css/style.css
+++ b/css/style.css
@@ -30,20 +30,25 @@ body {
   color: white;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-weight: 300;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.34;
   letter-spacing: 0.03em;
   min-width: 1200px; }
 
 .sections {
   background: white;
-  color: black;
+  color: #404040;
   padding: 80px 0;
   width: 1080px;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto; }
+  .sections h1, .sections h2, .sections h3, .sections h4, .sections h5, .sections h6 {
+    color: black; }
+    .sections h1 em, .sections h1 i, .sections h2 em, .sections h2 i, .sections h3 em, .sections h3 i, .sections h4 em, .sections h4 i, .sections h5 em, .sections h5 i, .sections h6 em, .sections h6 i {
+      color: inherit; }
+  .sections em, .sections i {
+    color: #252525; }
 
 .section {
   position: relative;
@@ -92,7 +97,7 @@ body {
       .section .section-helpers .section-delete:before {
         content: "×"; }
   .section .section-caption {
-    font-size: 17px;
+    font-size: 15px;
     width: 290px;
     float: right; }
     .section .section-caption.medium-editor-placeholder:after {
@@ -124,7 +129,8 @@ body {
   display: none; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: normal; }
+  font-weight: normal;
+  line-height: 1.2; }
 
 h1 {
   font-size: 35px; }
@@ -143,9 +149,9 @@ pre {
   font-family: Menlo, monospace;
   font-size: 13px; }
 
-ul {
+ul, ol, dl {
   padding: 0; }
-  ul li {
+  ul li, ol li, dl li {
     margin-bottom: 0.6em; }
 
 .section-content *:first-child, .section-caption *:first-child {
