--- a/sass/style.sass
+++ b/sass/style.sass
@@ -34,22 +34,30 @@ body
     -webkit-font-smoothing: antialiased
     text-rendering: optimizeLegibility
 
-    font-weight: 300
     font-size: 18px
-    line-height: 1.3
+    line-height: 1.34
     letter-spacing: .03em
 
     min-width: 1200px
 
 .sections
     background: #fff
-    color: #000
+    color: #404040
 
     padding: 80px 0
     width: 1080px
     max-width: 100%
     margin-left: auto
     margin-right: auto
+
+    h1, h2, h3, h4, h5, h6
+        color: #000
+
+        em, i
+            color: inherit
+
+    em, i
+        color: #252525
 
 .section
     position: relative
@@ -109,7 +117,7 @@ body
                 content: "×"
 
     .section-caption
-        font-size: 17px
+        font-size: 15px
         width: 290px
         float: right
 
@@ -157,6 +165,7 @@ body
 
 h1, h2, h3, h4, h5, h6
     font-weight: normal
+    line-height: 1.2
 
 h1
     font-size: 35px
@@ -175,7 +184,7 @@ pre
     font-family: Menlo, monospace
     font-size: 13px
 
-ul
+ul, ol, dl
     padding: 0
 
     li
